@@ -1,4 +1,9 @@
 ================= Unreleased ==================
+; Feature ; Minor ; PyFMI ; #5537
+Added the possibility to retrieve unit and display unit name for FMI2 
+and also its value in the display unit.
+
+================= Stable-2018-01-12 ==================
 ; Feature ; Major ; Compiler; #4797 
 Full string support
 
